replace thread pool with virtual thread